cluster1/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
    name: istio-system
    labels:
      topology.istio.io/network: network1
